feat: add rasterization, textures, lighting, and multi-camera